--- a/samples/XCT.Sample/Pages/Views/DrawingViewPage.xaml
+++ b/samples/XCT.Sample/Pages/Views/DrawingViewPage.xaml
@@ -8,8 +8,14 @@
 
     <ScrollView>
         <StackLayout>
-            <Switch x:Name="ClearOnFinish"  />
-            <Switch x:Name="MultiLineMode"  />
+            <StackLayout Orientation="Horizontal" Margin="5">
+                <Label Text="Clear on Finish" Margin="0,0,5,0" />
+                <Switch x:Name="ClearOnFinish" />
+            </StackLayout>
+            <StackLayout Orientation="Horizontal" Margin="5">
+                <Label Text="Multi-Line Mode" Margin="0,0,5,0" />
+                <Switch x:Name="MultiLineMode" />
+            </StackLayout>
             <Button
                 BackgroundColor="White"
                 Clicked="AddNewLine"
