--- a/samples/XCT.Sample/Pages/Views/DrawingViewPage.xaml
+++ b/samples/XCT.Sample/Pages/Views/DrawingViewPage.xaml
@@ -6,22 +6,25 @@
                 xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
                 xmlns:viewsVodel="clr-namespace:Xamarin.CommunityToolkit.Sample.ViewModels.Views;assembly=Xamarin.CommunityToolkit.Sample">
 
-    <pages:BasePage.BindingContext>
-        <viewsVodel:DrawingViewViewModel/>
-    </pages:BasePage.BindingContext>
-
     <ScrollView>
         <StackLayout>
-            <Switch x:Name="ClearOnFinish"  />
+            <StackLayout Orientation="Horizontal" Margin="5">
+                <Label Text="Clear on Finish" Margin="0,0,5,0" />
+                <Switch x:Name="ClearOnFinish" />
+            </StackLayout>
+            <StackLayout Orientation="Horizontal" Margin="5">
+                <Label Text="Multi-Line Mode" Margin="0,0,5,0" />
+                <Switch x:Name="MultiLineMode" />
+            </StackLayout>
+            <Button
+                BackgroundColor="White"
+                Clicked="AddNewLine"
+                Text="Add new line"
+                TextColor="Black" />
             <Button
                 BackgroundColor="White"
                 Clicked="LoadPointsButtonClicked"
                 Text="Load points"
-                TextColor="Black" />
-            <Button
-                BackgroundColor="White"
-                Command="{Binding SetPointsCommand}"
-                Text="Load points ViewModel"
                 TextColor="Black" />
             <Label
                 x:Name="HiddenLabel"
@@ -32,11 +35,6 @@
                 BackgroundColor="White"
                 Clicked="DisplayHiddenLabelButtonClicked"
                 Text="Display hidden label"
-                TextColor="Black" />
-            <Button
-                BackgroundColor="White"
-                Command="{Binding GetPointsCommand}"
-                Text="Get points ViewModel"
                 TextColor="Black" />
             <Button
                 BackgroundColor="White"
@@ -53,21 +51,16 @@
                 HeightRequest="100"
                 WidthRequest="100" />
             
-            <Label Text="Default DrawingView"/>
-            <views:DrawingView BackgroundColor="LightGray" HeightRequest="200" />
+            <Label Text="DrawingView (Code behind)"/>
+            <views:DrawingView x:Name="DrawingViewControl" 
+                               BackgroundColor="LightGray" 
+                               HeightRequest="200"
+                               DefaultLineColor="Red"
+                               DefaultLineWidth="3"
+                               Lines="{Binding Lines, Mode=TwoWay}"
+                               ClearOnFinish="{Binding Source={x:Reference ClearOnFinish}, Path=IsToggled}"
+                               MultiLineMode="{Binding Source={x:Reference MultiLineMode}, Path=IsToggled}"/>
 
-            <Label Text="Advanced DrawingView"/>
-            <views:DrawingView
-                x:Name="DrawingViewControl"
-                Points="{Binding MacroPoints, Mode=TwoWay}"
-                EnableSmoothedPath="false"
-                Granularity="5"
-                BackgroundColor="DarkGray"
-                ClearOnFinish="{Binding Source={x:Reference ClearOnFinish}, Path=IsToggled}"
-                HorizontalOptions="FillAndExpand"
-                LineColor="Red"
-                LineWidth="10"
-                HeightRequest="200" />
             <Editor x:Name="Logs" HeightRequest="50" />
         </StackLayout>
     </ScrollView>
