Develop to main for 1.3-pre3 (#1573)
* merge main -> dev (#1300)

* Automated dotnet-format update (#1296)

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

* https://github.com/xamarin/XamarinCommunityToolkit/issues/1292 (#1301)

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
Co-authored-by: Andrei <andrei.misiukevich@gmail.com>

* Expander: Add touch capture view + common animation length / easing properties (#1349)

* Added base animation props

* Added TouchCaptureView property

* Updated light dismiss xml docs (#1366)

* [Converter] Added IsInRangeConverter (#1158)

* Added IsBetweenConverter

* Renamed to IsInRangeConverter

* Added Sample Page

* Added IsInRangeConverterViewModel

* Updated UnitTests

* Cleanup

* Removed RevertResult

* Implemented BindableObjectExtension

* Made ValueConverterExtension inherited from BindableObject

Co-authored-by: Brandon Minnick <13558917+brminnick@users.noreply.github.com>
Co-authored-by: Javier Suárez <javiersuarezruiz@hotmail.com>
Co-authored-by: Pedro Jesus <pedrojesus.cefet@gmail.com>
Co-authored-by: Andrei <andrei.misiukevich@gmail.com>
Co-authored-by: Gerald Versluis <gerald.versluis@microsoft.com>

* Drawing View (#740)

* DrawingView (#468)

* DrawingView control, samples, documentation

* fix build issues

Co-authored-by: Vladislav Antonyuk <vlad.antonyuk@outlook.com>
Co-authored-by: Pedro Jesus <pedrojesus.cefet@gmail.com>

* fixed codestyle on Android renderer

* GTK renderer adjustments

* iOS renderer adjustments

* MacOS renderer adjustments

* TIzen rendere adjustments

* UWP renderer adjustments

* WPF tests

* Fixed merge conflict

* Fixed wpf stackoverflow exception

* fixed iOS leaks

* revert toast change

* removed wpf implementations

* root sample page to WelcomePage

* removed DrawingView ctor from MainWindow

* removed drawing

--- a/samples/XCT.Sample/Pages/Views/DrawingViewPage.xaml
+++ b/samples/XCT.Sample/Pages/Views/DrawingViewPage.xaml
@@ -6,37 +6,37 @@
                 xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
                 xmlns:viewsVodel="clr-namespace:Xamarin.CommunityToolkit.Sample.ViewModels.Views;assembly=Xamarin.CommunityToolkit.Sample">
 
-    <pages:BasePage.BindingContext>
-        <viewsVodel:DrawingViewViewModel/>
-    </pages:BasePage.BindingContext>
-
     <ScrollView>
         <StackLayout>
-            <Switch x:Name="ClearOnFinish"  />
+            <StackLayout Orientation="Horizontal" Margin="5">
+                <Label Text="Clear on Finish" Margin="0,0,5,0" />
+                <Switch x:Name="ClearOnFinish" />
+            </StackLayout>
+            <StackLayout Orientation="Horizontal" Margin="5">
+                <Label Text="Multi-Line Mode" Margin="0,0,5,0" />
+                <Switch x:Name="MultiLineMode" />
+            </StackLayout>
+            <Button
+                BackgroundColor="White"
+                Clicked="AddNewLine"
+                Text="Add new line"
+                TextColor="Black" />
             <Button
                 BackgroundColor="White"
                 Clicked="LoadPointsButtonClicked"
                 Text="Load points"
                 TextColor="Black" />
-            <Button
-                BackgroundColor="White"
-                Command="{Binding SetPointsCommand}"
-                Text="Load points ViewModel"
-                TextColor="Black" />
-            <Label
-                x:Name="HiddenLabel"
+            <StackLayout x:Name="HiddenPanel"
                 HorizontalOptions="CenterAndExpand"
-                IsVisible="False"
-                Text="Draw &amp; GO" />
+                IsVisible="False">
+                <Label Text="Draw &amp; GO" />
+                <Button Text="Clear all lines"
+                        Clicked="ClearLines_Clicked"/>
+            </StackLayout>
             <Button
                 BackgroundColor="White"
                 Clicked="DisplayHiddenLabelButtonClicked"
                 Text="Display hidden label"
-                TextColor="Black" />
-            <Button
-                BackgroundColor="White"
-                Command="{Binding GetPointsCommand}"
-                Text="Get points ViewModel"
                 TextColor="Black" />
             <Button
                 BackgroundColor="White"
@@ -52,22 +52,17 @@
                 x:Name="GestureImage"
                 HeightRequest="100"
                 WidthRequest="100" />
-            
-            <Label Text="Default DrawingView"/>
-            <views:DrawingView BackgroundColor="LightGray" HeightRequest="200" />
 
-            <Label Text="Advanced DrawingView"/>
-            <views:DrawingView
-                x:Name="DrawingViewControl"
-                Points="{Binding MacroPoints, Mode=TwoWay}"
-                EnableSmoothedPath="false"
-                Granularity="5"
-                BackgroundColor="DarkGray"
-                ClearOnFinish="{Binding Source={x:Reference ClearOnFinish}, Path=IsToggled}"
-                HorizontalOptions="FillAndExpand"
-                LineColor="Red"
-                LineWidth="10"
-                HeightRequest="200" />
+            <Label Text="DrawingView (Code behind)"/>
+            <views:DrawingView x:Name="DrawingViewControl" 
+                               BackgroundColor="LightGray" 
+                               HeightRequest="200"
+                               DefaultLineColor="Red"
+                               DefaultLineWidth="3"
+                               Lines="{Binding Lines, Mode=TwoWay}"
+                               ClearOnFinish="{Binding Source={x:Reference ClearOnFinish}, Path=IsToggled}"
+                               MultiLineMode="{Binding Source={x:Reference MultiLineMode}, Path=IsToggled}"/>
+
             <Editor x:Name="Logs" HeightRequest="50" />
         </StackLayout>
     </ScrollView>
