--- a/samples/XCT.Sample/Pages/Behaviors/AnimationBehaviorPage.xaml
+++ b/samples/XCT.Sample/Pages/Behaviors/AnimationBehaviorPage.xaml
@@ -14,12 +14,7 @@
                      Spacing="10">
 
             <Label Text="This sample demonstrates how to use ViewTappedAnimationBehaviour applying it in different UI elements."
-                   Padding="10,10,10,50"
-                   BackgroundColor="Red">
-                 <Label.GestureRecognizers>
-                     <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped" />
-                 </Label.GestureRecognizers>
-             </Label>
+                   Padding="10,10,10,50"/>
 
             <Button Text="Tada"
                     FontSize="40"
@@ -29,9 +24,9 @@
                  <Button.Behaviors>
                       <xct:AnimationBehavior EventName="Clicked">
                             <xct:AnimationBehavior.AnimationType>
-                                <xct:TadaAnimationType Easing="{x:Static Easing.Linear}"
-                                                       Duration="1000"
-                                                       RotationAngle="100"/>
+                                <xct:TadaAnimation Easing="{x:Static Easing.Linear}"
+                                                   IsRepeated="True"
+                                                   Duration="1000"/>
                             </xct:AnimationBehavior.AnimationType>
                         </xct:AnimationBehavior>
                 </Button.Behaviors>
