--- a/samples/XCT.Sample/Pages/Extensions/EdgeInsetsExtensionPage.xaml
+++ b/samples/XCT.Sample/Pages/Extensions/EdgeInsetsExtensionPage.xaml
@@ -13,58 +13,54 @@
                 Horizontal=24,
                 Vertical=40}"
             FontSize="Title"
-            Text="Defining a padding/marging using EdgeInsetsExtension"/>
+            Text="Defining a padding/margin using EdgeInsetsExtension"/>
         <Label 
             Margin="{xct:EdgeInsets 
                 Horizontal=24,
                 Vertical=40}"
-            Text="{{xct:EdgeInsets All=16}}"/>
+            Text="{}{xct:EdgeInsets All=16}"/>
         <BoxView
             Margin="{xct:EdgeInsets 
                 All=16}"
             WidthRequest="50"
             HeightRequest="50"
-            BackgroundColor="Purple"
-            Source="{xct:ImageResource Id=Xamarin.CommunityToolkit.Sample.Images.logo.png}"/>
+            BackgroundColor="Purple"/>
 
         <Label 
             Margin="{xct:EdgeInsets 
                 Horizontal=24,
                 Vertical=40}"
-            Text="{{xct:EdgeInsets Horizontal=16}}"/>
+            Text="{}{xct:EdgeInsets Horizontal=16}"/>
         <BoxView
             Margin="{xct:EdgeInsets 
                 Horizontal=16}"
             WidthRequest="50"
             HeightRequest="50"
-            BackgroundColor="Orange"
-            Source="{xct:ImageResource Id=Xamarin.CommunityToolkit.Sample.Images.logo.png}"/>
+            BackgroundColor="Orange"/>
 
         <Label 
             Margin="{xct:EdgeInsets 
                 Horizontal=24,
                 Vertical=40}"
-            Text="{{xct:EdgeInsets Vertical=16}}"/>
+            Text="{}{xct:EdgeInsets Vertical=16}"/>
         <BoxView
             Margin="{xct:EdgeInsets 
                 Vertical=16}"
             WidthRequest="50"
             HeightRequest="50"
-            BackgroundColor="DarkGrey"
-            Source="{xct:ImageResource Id=Xamarin.CommunityToolkit.Sample.Images.logo.png}"/>
+            BackgroundColor="DarkGray"/>
 
         <Label 
             Margin="{xct:EdgeInsets 
                 Horizontal=24,
                 Vertical=40}"
-            Text="{{xct:EdgeInsets Top=16, Bottom=40, Left=56, Right=32}}"/>
+            Text="{}{xct:EdgeInsets Top=16, Bottom=40, Left=56, Right=32}"/>
         <BoxView
             Margin="{xct:EdgeInsets 
                 Top=16, Bottom=40,
                 Left=56, Right=32}"
             WidthRequest="50"
             HeightRequest="50"
-            BackgroundColor="DarkGrey"
-            Source="{xct:ImageResource Id=Xamarin.CommunityToolkit.Sample.Images.logo.png}"/>
+            BackgroundColor="DarkCyan"/>
     </StackLayout>
 </pages:BasePage>
