--- a/samples/XCT.Sample/Pages/Behaviors/AnimationBehaviorPage.xaml
+++ b/samples/XCT.Sample/Pages/Behaviors/AnimationBehaviorPage.xaml
@@ -16,6 +16,22 @@
             <Label Text="This sample demonstrates how to use ViewTappedAnimationBehaviour applying it in different UI elements."
                    Padding="10,10,10,50"/>
 
+            <Button Text="Tada"
+                    FontSize="40"
+                    FontAttributes="Bold"
+                    TextColor="#2D1767"
+                    BackgroundColor="#F8E3C8">
+                 <Button.Behaviors>
+                      <xct:AnimationBehavior EventName="Clicked">
+                            <xct:AnimationBehavior.AnimationType>
+                                <xct:TadaAnimation Easing="{x:Static Easing.Linear}"
+                                                   IsRepeated="True"
+                                                   Duration="1000"/>
+                            </xct:AnimationBehavior.AnimationType>
+                        </xct:AnimationBehavior>
+                </Button.Behaviors>
+            </Button>
+
             <Button Text="Testing Fade Animation"
                    TextColor="HotPink">
                  <Button.Behaviors>
