--- a/samples/XCT.Sample/Pages/Views/Popups/NoLightDismissPopup.xaml
+++ b/samples/XCT.Sample/Pages/Views/Popups/NoLightDismissPopup.xaml
@@ -34,14 +34,14 @@
     <StackLayout Style="{StaticResource PopupLayout}">
         <Label 
             Style="{StaticResource Title}" 
-            Text="Simple Popup" />
+            Text="Simple Popup Without Light Dismiss" />
         <BoxView Style="{StaticResource Divider}" />
         <Label 
             Style="{StaticResource Content}"
             Text="{OnPlatform
                 Android='This is a native popup with a Xamarin.Forms View being rendered. The behaviors of the popup will confirm to 100% native look and feel, but still allows you to use your Xamarin.Forms controls.',
                 iOS='This is a native popup with a Xamarin.Forms View being rendered. The behaviors of the popup will confirm to 100% native look and feel, but still allows you to use your Xamarin.Forms controls.',
-                UWP='UWP Flyouts do not support toggling light dismiss mode. On UWP this will always dismiss the flyout if you tap outside of the control'}" />
+                UWP='UWP Flyouts do not have native support for toggling light dismiss mode. On UWP this will disrupt the closing of the flyout if you tap outside of the control'}" />
         <Button 
             Text="Close"
             VerticalOptions="EndAndExpand"
